fixing contrast on carousel indicators & some other details

--- a/sass/components/_carousel.scss
+++ b/sass/components/_carousel.scss
@@ -67,7 +67,7 @@
 
     .indicator-item {
       &.active {
-        background-color: #fff;
+        background-color: #c51162;
       }
 
       display: inline-block;
@@ -76,7 +76,8 @@
       height: 8px;
       width: 8px;
       margin: 24px 4px;
-      background-color: rgba(255,255,255,.5);
+			background-color: #607d8b;
+      //background-color: rgba(255,255,255,.5);
 
       transition: background-color .3s;
       border-radius: 50%;
